# sagasmith-core

./: .gitignore  LICENSE  README-en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  QUICKSTART.md  RETRIEVAL.md
src/sagasmith_core/: __init__.py  access.py  branches.py  campaigns.py  characters.py  continuity.py  continuity_commit.py  database.py  documents.py  embeddings.py  events.py  idempotency.py  import_jobs.py  items.py  knowledge.py  maps.py  memory.py  models.py  modules.py  nanobot.py  parsing.py  paths.py  profile.py  retrieval.py  revisions.py  rules.py  snapshots.py  state.py  systems.py  vector.py
src/sagasmith_core/migrations/: __init__.py  env.py
src/sagasmith_core/migrations/versions/: 20260701_01_initial.py  20260706_04_fts5_search_index.py  20260713_07_branch_continuity.py  20260714_08_runtime_integrity.py  20260715_11_scene_spatial_progress.py  20260715_12_import_jobs.py  20260722_14_module_chunk_fts_headings.py  20260723_15_long_term_memory_v2.py  __init__.py
tests/: conftest.py  test_campaigns_characters.py  test_database.py  test_embeddings.py  test_import_jobs.py  test_items.py  test_maps.py  test_migrations.py  test_modules.py  test_parsing_retrieval.py  test_pdf_rendering.py  test_rules.py  test_runtime_integrity.py  test_state_documents.py
