[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sagasmith-core"
version = "0.2.0"
description = "System-neutral database, document, retrieval, and campaign runtime for tabletop RPGs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SagaSmithAI" }]
dependencies = [
    "sqlalchemy>=2.0.41,<3.0.0",
    "alembic>=1.16.0,<2.0.0",
    "numpy>=1.26.0,<3.0.0",
]

[project.optional-dependencies]
vector = ["chromadb>=0.6.0,<1.0.0"]
embedding = ["sentence-transformers>=5.0.0,<6.0.0"]
documents = [
    "pypdf>=5.0.0,<7.0.0",
    "pypdfium2>=4.30.0,<5.0.0",
    "pillow>=10.0.0,<13.0.0",
]
all = [
    "chromadb>=0.6.0,<1.0.0",
    "sentence-transformers>=5.0.0,<6.0.0",
    "pypdf>=5.0.0,<7.0.0",
    "pypdfium2>=4.30.0,<5.0.0",
    "pillow>=10.0.0,<13.0.0",
]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sagasmith_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
